<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diario</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="nombre">Nombre</string>
    <string name="password">Password</string>
    <string name="confirme_password">Confirme Password</string>
    <string name="email">email</string>
    <string name="registrese_">Registrese!</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="ingrese_email">Ingrese email</string>
    <string name="iniciar">Iniciar</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="ingrese_password">Ingrese Password</string>
    <string name="title_activity_application">ApplicationActivity</string>
    <string name="perfil">Perfil</string>
    <string name="salir">Salir</string>
    <string name="title_activity_diario_main">DiarioMainActivity</string>
    <string name="title_activity_nota">NotaActivity</string>
    <string name="title_activity_nota_main">NotaMainActivity</string>
    <string name="agregar_notas">Agregar notas</string>
    <string name="titulo_nota">Titulo nota</string>
    <string name="contenido">Contenido</string>
    <string name="guardar_nota">Guardar nota</string>
    <string name="fecha">Fecha</string>
    <string name="ver_notas">Ver notas</string>
    <string name="amigos_de_mi_diario">Amigos de mi Diario</string>
    <string name="descripcion">Descripcion</string>
    <string name="title_activity_linear_layout01">LinearLayout01Activity</string>
    <string name="agregar_amigo">Agregar amigo</string>
    <string name="bernardo">Bernardo</string>
    <string name="carlos">Carlos</string>
    <string name="noemi">Noemi</string>
    <string name="samuel">Samuel</string>
    <string name="title_activity_amigos">AmigosActivity</string>
    <string name="background"></string>
    <string name="title_activity_amigos_activity2">AmigosActivity2</string>
    <string name="mis_amigos">Mis amigos</string>
    <string name="misamigos">Amigos</string>
    <string name="title_activity_ajustes1">Ajustes1</string>
    <string name="title_activity_ajustes2">Ajustes2</string>
    <string name="todo">TODO</string>
    <string name="title_activity_proyecto042">Proyecto042</string>
    <string name="title_activity_circulo">CirculoActivity</string>
    <string name="jugarcirculo">jugar con circulo</string>
    <string name="textswitchajustes">textswitchajustes</string>
    <string name="textswitch1">textswitch1</string>
    <string name="textswitchajustes2">textswitchajustes2</string>
    <string name="agregarajustes2">agregarAjustes2</string>
    <string name="ajustes_de_perfil">Ajustes de Perfil</string>
    <string name="activar">Activar</string>
    <string name="desea_recibir_actualizaciones">Desea recibir actualizaciones</string>
    <string name="desea_recibir_notificaciones">Desea recibir notificaciones</string>
    <string name="elegir">Elegir</string>
    <string name="onclickajustes1">onClickAjustes1</string>
    <string name="finalizar">Finalizar</string>
    <string name="ajustes">ajustes</string>

</resources>
