<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#66FF66"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity" >

     <EditText
         android:id="@+id/nameField"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:ems="10"
         android:hint="@string/nombre"
         android:inputType="text" />

     <EditText
         android:id="@+id/emailField"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/nameField"
         android:layout_below="@+id/nameField"
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textEmailAddress" />

     <EditText
         android:id="@+id/passwordField"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/emailField"
         android:layout_below="@+id/emailField"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword" />

     <EditText
         android:id="@+id/passwordConfirmationField"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/passwordField"
         android:layout_below="@+id/passwordField"
         android:ems="10"
         android:hint="@string/confirme_password"
         android:inputType="textPassword" />

     <Button
         android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/passwordConfirmationField"
         android:layout_centerHorizontal="true"
         android:textColor="#000099"
         android:layout_marginTop="69dp"
         android:onClick="onRegisterButtonClicked"
         android:text="@string/registrarse" />

     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textColor="#000099"
         android:layout_marginTop="30dp"
         android:text="@string/registrese_"
         android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>