<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFF99"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ApplicationActivity" >
    
        <TextView
            android:id="@+id/nameTextViewField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

       <Button
           android:id="@+id/profileButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/imageView1"
           android:layout_alignTop="@+id/nameTextViewField"
           android:layout_marginTop="18dp"
           android:onClick="onProfileButtonClicked"
           android:text="@string/perfil"
           android:textColor="#FF0000" />

       <Button
           android:id="@+id/button1"
           style="?android:attr/buttonStyleSmall"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBaseline="@+id/profileButton"
           android:layout_alignBottom="@+id/profileButton"
           android:layout_toRightOf="@+id/profileButton"
           android:onClick="onHistorialNotas"
           android:text="@string/ver_notas"
           android:textColor="#FF0000" />

       <ImageView
           android:id="@+id/imageView1"
           android:layout_width="190dp"
           android:layout_height="190dp"
           android:layout_centerVertical="true"
           android:layout_toRightOf="@+id/nameTextViewField"
           android:contentDescription="@string/background"
           android:src="@drawable/ic_pollo" />

       <Button
           android:id="@+id/button2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_below="@+id/imageView1"
           android:onClick="onamigoboton1"
           android:text="@string/jugarcirculo"
           android:textColor="#FF0000" />

       <Button
           android:id="@+id/logoutButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/imageView1"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="19dp"
           android:layout_marginLeft="24dp"
           android:onClick="onLogoutButtonClicked"
           android:text="@string/salir"
           android:textColor="#FF0000" />

       <Button
           android:id="@+id/Button01"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignRight="@+id/logoutButton"
           android:layout_below="@+id/profileButton"
           android:onClick="onamigoboton"
           android:text="@string/misamigos"
           android:textColor="#FF0000" />

       <Button
           android:id="@+id/button3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignBaseline="@+id/logoutButton"
           android:layout_alignBottom="@+id/logoutButton"
           android:layout_alignRight="@+id/imageView1"
           android:onClick="onajustes"
           android:text="@string/ajustes"
           android:textColor="#FF0000" />

</RelativeLayout>