<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#66FF66"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="?android:attr/buttonBarButtonStyle"
    tools:context=".PersonActivity" >
    
     <EditText
         android:id="@+id/firstNameField"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/titulo_nota"
         android:inputType="text" />
    
        <EditText
            android:id="@+id/lastNameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="text" />
      
        <EditText
            android:id="@+id/emailField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fecha"
            android:inputType="textEmailAddress" />
        
         <Button
             android:id="@+id/saveButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="17dp"
             android:textColor="#000099"
             android:onClick="onSaveButtonClicked"
             android:text="@string/guardar_nota" />
         
         <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                
                android:visibility="invisible"
                android:onClick="onDeleteButtonClicked" />

</LinearLayout>