<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#CCFF99"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity" >

     <EditText
         android:id="@+id/loginEmailField"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="55dp"
         
         android:ems="10"
         android:hint="@string/ingrese_email"
         android:inputType="textEmailAddress" />

     <EditText
         android:id="@+id/loginPasswordField"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/loginEmailField"
         android:layout_below="@+id/loginEmailField"
         android:layout_marginTop="14dp"
         android:ems="10"
         android:hint="@string/ingrese_password"
         android:inputType="textPassword" />

     <Button
         android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:onClick="onLoginButtonClicked"
         android:text="@string/iniciar" />

     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textColor="#339900"
         android:layout_marginTop="25dp"
         android:text="@string/iniciar_sesion"
         android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>